@@ -151,12 +151,12 @@ func NewForm() *Form {
 		Box:                          box,
 		itemPadding:                  1,
 		labelColor:                   Styles.SecondaryTextColor,
-		fieldBackgroundColor:         Styles.ContrastBackgroundColor,
-		fieldBackgroundColorFocused:  Styles.MoreContrastBackgroundColor,
+		fieldBackgroundColor:         Styles.MoreContrastBackgroundColor,
+		fieldBackgroundColorFocused:  Styles.ContrastBackgroundColor,
 		fieldTextColor:               Styles.PrimaryTextColor,
 		fieldTextColorFocused:        Styles.PrimaryTextColor,
-		buttonBackgroundColor:        Styles.ContrastBackgroundColor,
-		buttonBackgroundColorFocused: Styles.MoreContrastBackgroundColor,
+		buttonBackgroundColor:        Styles.MoreContrastBackgroundColor,
+		buttonBackgroundColorFocused: Styles.ContrastBackgroundColor,
 		buttonTextColor:              Styles.PrimaryTextColor,
 		buttonTextColorFocused:       Styles.PrimaryTextColor,
 		labelColorFocused:            ColorUnset,
